--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity
             android:name=".AddTagActivity"
             android:label="@string/title_activity_add_tag"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme">
 
         </activity>
