--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         </activity>
         <activity
             android:name=".AddTagActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_add_tag"
             android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme">
