--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/CustomTheme">
@@ -28,7 +28,7 @@
             android:screenOrientation="portrait"
             android:label="@string/title_activity_add_tag"
             android:windowSoftInputMode="adjustPan"
-            android:theme="@style/AppTheme">
+            android:theme="@style/CustomTheme">
 
         </activity>
     </application>
