--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,14 @@ dependencies {
     compile files('Libs/picasso-2.5.2.jar')
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.amazonaws:aws-android-sdk-core:2.2.+'
+    compile 'com.amazonaws:aws-android-sdk-cognito:2.2.+'
     compile 'com.amazonaws:aws-android-sdk-s3:2.2.+'
     compile 'com.amazonaws:aws-android-sdk-ddb:2.2.+'
     compile 'com.amazonaws:aws-android-sdk-ddb-mapper:2.2.+'
     compile 'com.android.support:design:25.1.0'
     testCompile 'junit:junit:4.12'
     testCompile 'com.amazonaws:aws-android-sdk-core:2.2.+'
+    testCompile 'com.amazonaws:aws-android-sdk-cognito:2.2.+'
     testCompile 'com.amazonaws:aws-android-sdk-s3:2.2.+'
     testCompile 'com.amazonaws:aws-android-sdk-ddb:2.2.+'
     testCompile 'com.amazonaws:aws-android-sdk-ddb-mapper:2.2.+'
