--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,10 @@
             android:label="@string/title_activity_add_tag"
             android:windowSoftInputMode="adjustPan"
             android:theme="@style/CustomTheme">
-
         </activity>
+        <service
+            android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
+            android:enabled="true"/>
     </application>
 
 </manifest>
