--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
             android:label="@string/title_activity_add_tag"
             android:windowSoftInputMode="adjustPan"
             android:theme="@style/CustomTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="TagsActivity" />
         </activity>
         <service
             android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
