--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:icon="@mipmap/logo_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/CustomTheme">
+        android:theme="@style/CustomTheme"
+        android:hardwareAccelerated="false"
+        android:largeHeap="true">
         <activity
             android:name=".TagsActivity"
             android:screenOrientation="portrait">
