--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,7 @@
         android:icon="@mipmap/logo_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/CustomTheme"
-        android:hardwareAccelerated="false"
-        android:largeHeap="true">
+        android:theme="@style/CustomTheme">
         <activity
             android:name=".TagsActivity"
             android:screenOrientation="portrait">
